--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/GameLevel.GameLevel
-EditorStartupMap=/Game/Levels/GameLevel.GameLevel
+GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
